Closed
Bug 1030014
Opened 11 years ago
Closed 11 years ago
Unable to compile deterministic js shells
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla33
People
(Reporter: gkw, Assigned: jorendorff)
References
Details
(Keywords: regression, Whiteboard: [fuzzblocker])
Attachments
(2 files, 1 obsolete file)
14.20 KB,
text/plain
|
Details | |
896 bytes,
patch
|
jorendorff
:
review+
|
Details | Diff | Splinter Review |
I'm unable to compile deterministic debug ARM-simulator js shells.
Steps:
1. In js/src, run autoconf213
2. Create and cd into objdir
3. Run: LD=ld CROSS_COMPILE=1 CC="clang -Qunused-arguments -msse2 -mfpmath=sse -arch i386" RANLIB=ranlib CXX="clang++ -Qunused-arguments -msse2 -mfpmath=sse -arch i386" AS=$CC AR=ar STRIP="strip -x -S" HOST_CC="clang -Qunused-arguments -msse2 -mfpmath=sse" HOST_CXX="clang++ -Qunused-arguments -msse2 -mfpmath=sse" sh /Users/skywalker/trees/mozilla-central/js/src/configure --target=i386-apple-darwin9.2.0 --enable-macos-target=10.5 --enable-optimize --disable-debug --enable-profiling --enable-gczeal --enable-debug-symbols --disable-tests --enable-more-deterministic --with-ccache --disable-threadsafe --enable-arm-simulator
4. Run: make -j1
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: https://hg.mozilla.org/mozilla-central/rev/4a04ca5ed7d3
user: Jason Orendorff
date: Mon Jun 23 10:57:03 2014 -0500
summary: Bug 645417, part 26 - Update jsid sorting for JS_MORE_DETERMINISTIC. r=luke.
jorendorff, is bug 645417 a likely regressor?
Flags: needinfo?(jorendorff)
![]() |
Reporter | |
Comment 1•11 years ago
|
||
That seems like the wrong bug number in the commit message - maybe it's bug 645416?
Also, this build failure seems to also happen on Linux. Just compile with your usual 32-bit compilation parameters and --enable-debug --enable-arm-simulator --enable-more-deterministic.
![]() |
Reporter | |
Comment 2•11 years ago
|
||
> --target=i386-apple-darwin9.2.0 --enable-macos-target=10.5 --enable-optimize
> --disable-debug --enable-profiling --enable-gczeal --enable-debug-symbols
This should be --enable-debug --disable-optimize.
![]() |
Reporter | |
Comment 3•11 years ago
|
||
fwiw I'm also unable to compile non-threadsafe shells (not ARM simulator).
Summary: Unable to compile deterministic debug ARM-simulator js shells → Unable to compile deterministic debug non-threadsafe js shells
Assignee | ||
Comment 4•11 years ago
|
||
Two bugs:
- one in symbol code (mine, introduced by renaming something)
- one in gc code (lars's, therefore he gets the review)
Assignee: nobody → jorendorff
Attachment #8446817 -
Flags: review?(lhansen)
Flags: needinfo?(jorendorff)
![]() |
Reporter | |
Comment 5•11 years ago
|
||
Comment on attachment 8446817 [details] [diff] [review]
bug-1030014-v1.patch
This patch fixes my build failures for deterministic and/or threadsafe, and also ARM simulator builds after some quick testing.
Attachment #8446817 -
Flags: feedback+
Comment 6•11 years ago
|
||
Comment on attachment 8446817 [details] [diff] [review]
bug-1030014-v1.patch
Review of attachment 8446817 [details] [diff] [review]:
-----------------------------------------------------------------
r=me for the UniqueSymbol thing
Attachment #8446817 -
Flags: review?(lhansen) → review+
Assignee | ||
Comment 7•11 years ago
|
||
jandem already fixed the other bit, so I'm ready to land just the UniqueSymbol thing, as soon as the tree opens.
Assignee | ||
Comment 8•11 years ago
|
||
Carrying forward sfink's review.
Attachment #8446817 -
Attachment is obsolete: true
Attachment #8447368 -
Flags: review+
Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
![]() |
Reporter | |
Comment 9•11 years ago
|
||
Keywords: checkin-needed
Target Milestone: --- → mozilla33
![]() |
Reporter | |
Updated•11 years ago
|
Summary: Unable to compile deterministic debug non-threadsafe js shells → Unable to compile deterministic js shells
![]() |
Reporter | |
Comment 10•11 years ago
|
||
Borked commit message for the first landing, backed out, relanded.
https://hg.mozilla.org/integration/mozilla-inbound/rev/d4500ef33c12
https://hg.mozilla.org/integration/mozilla-inbound/rev/d0a80ba46f6f
Comment 11•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•