changeset:   217199:e58ff2fcc8a1 bookmark:    jto/bug-1030014-more-deterministic parent:      217183:123e07744d21 user:        Jason Orendorff <jorendorff@mozilla.com> summary:     Bug 1030014 - Fix a compile error in more-deterministic JS shells. r=sfink.